// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ast utils updateCodeAst CallExpression changed arguments changed should update property and reset value (first attribute changed) 1`] = `
{
  "ast": Script {
    "body": [
      IfStatement {
        "alternate": BlockStatement {
          "body": [],
          "loc": {
            "end": {
              "column": 1,
              "line": 3,
            },
            "start": {
              "column": 7,
              "line": 2,
            },
          },
          "type": "BlockStatement",
        },
        "consequent": BlockStatement {
          "body": [],
          "loc": {
            "end": {
              "column": 1,
              "line": 2,
            },
            "start": {
              "column": 39,
              "line": 1,
            },
          },
          "type": "BlockStatement",
        },
        "loc": {
          "end": {
            "column": 1,
            "line": 3,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "test": CallExpression {
          "arguments": [
            StaticMemberExpression {
              "computed": false,
              "loc": {
                "end": {
                  "column": 36,
                  "line": 1,
                },
                "start": {
                  "column": 15,
                  "line": 1,
                },
              },
              "object": Identifier {
                "loc": {
                  "end": {
                    "column": 22,
                    "line": 1,
                  },
                  "start": {
                    "column": 15,
                    "line": 1,
                  },
                },
                "name": "message",
                "type": "Identifier",
              },
              "property": Identifier {
                "loc": {
                  "end": {
                    "column": 36,
                    "line": 1,
                  },
                  "start": {
                    "column": 23,
                    "line": 1,
                  },
                },
                "name": "sent_datetime",
                "type": "Identifier",
              },
              "type": "MemberExpression",
            },
          ],
          "callee": Identifier {
            "loc": {
              "end": {
                "column": 14,
                "line": 1,
              },
              "start": {
                "column": 4,
                "line": 1,
              },
            },
            "name": "isNotEmpty",
            "type": "Identifier",
          },
          "loc": {
            "end": {
              "column": 37,
              "line": 1,
            },
            "start": {
              "column": 4,
              "line": 1,
            },
          },
          "type": "CallExpression",
        },
        "type": "IfStatement",
      },
    ],
    "loc": {
      "end": {
        "column": 1,
        "line": 3,
      },
      "start": {
        "column": 0,
        "line": 1,
      },
    },
    "sourceType": "script",
    "type": "Program",
  },
  "code": "if (isNotEmpty(message.sent_datetime)) {
} else {
}",
}
`;

exports[`ast utils updateCodeAst CallExpression changed arguments changed should update property and reset value (middle attribute changed 1`] = `
{
  "ast": Script {
    "body": [
      IfStatement {
        "alternate": BlockStatement {
          "body": [],
          "loc": {
            "end": {
              "column": 1,
              "line": 3,
            },
            "start": {
              "column": 7,
              "line": 2,
            },
          },
          "type": "BlockStatement",
        },
        "consequent": BlockStatement {
          "body": [],
          "loc": {
            "end": {
              "column": 1,
              "line": 2,
            },
            "start": {
              "column": 28,
              "line": 1,
            },
          },
          "type": "BlockStatement",
        },
        "loc": {
          "end": {
            "column": 1,
            "line": 3,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "test": CallExpression {
          "arguments": [
            StaticMemberExpression {
              "computed": false,
              "loc": {
                "end": {
                  "column": 21,
                  "line": 1,
                },
                "start": {
                  "column": 7,
                  "line": 1,
                },
              },
              "object": Identifier {
                "loc": {
                  "end": {
                    "column": 13,
                    "line": 1,
                  },
                  "start": {
                    "column": 7,
                    "line": 1,
                  },
                },
                "name": "ticket",
                "type": "Identifier",
              },
              "property": Identifier {
                "loc": {
                  "end": {
                    "column": 21,
                    "line": 1,
                  },
                  "start": {
                    "column": 14,
                    "line": 1,
                  },
                },
                "name": "subject",
                "type": "Identifier",
              },
              "type": "MemberExpression",
            },
            Literal {
              "loc": {
                "end": {
                  "column": 25,
                  "line": 1,
                },
                "start": {
                  "column": 23,
                  "line": 1,
                },
              },
              "raw": "''",
              "type": "Literal",
              "value": "",
            },
          ],
          "callee": Identifier {
            "loc": {
              "end": {
                "column": 6,
                "line": 1,
              },
              "start": {
                "column": 4,
                "line": 1,
              },
            },
            "name": "eq",
            "type": "Identifier",
          },
          "loc": {
            "end": {
              "column": 26,
              "line": 1,
            },
            "start": {
              "column": 4,
              "line": 1,
            },
          },
          "type": "CallExpression",
        },
        "type": "IfStatement",
      },
    ],
    "loc": {
      "end": {
        "column": 1,
        "line": 3,
      },
      "start": {
        "column": 0,
        "line": 1,
      },
    },
    "sourceType": "script",
    "type": "Program",
  },
  "code": "if (eq(ticket.subject, '')) {
} else {
}",
}
`;

exports[`ast utils updateCodeAst CallExpression changed arguments changed should update property and reset value (middle attribute changed 2`] = `
{
  "ast": Script {
    "body": [
      IfStatement {
        "alternate": BlockStatement {
          "body": [],
          "loc": {
            "end": {
              "column": 1,
              "line": 3,
            },
            "start": {
              "column": 7,
              "line": 2,
            },
          },
          "type": "BlockStatement",
        },
        "consequent": BlockStatement {
          "body": [],
          "loc": {
            "end": {
              "column": 1,
              "line": 2,
            },
            "start": {
              "column": 46,
              "line": 1,
            },
          },
          "type": "BlockStatement",
        },
        "loc": {
          "end": {
            "column": 1,
            "line": 3,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "test": CallExpression {
          "arguments": [
            StaticMemberExpression {
              "computed": false,
              "loc": {
                "end": {
                  "column": 39,
                  "line": 1,
                },
                "start": {
                  "column": 19,
                  "line": 1,
                },
              },
              "object": StaticMemberExpression {
                "computed": false,
                "loc": {
                  "end": {
                    "column": 34,
                    "line": 1,
                  },
                  "start": {
                    "column": 19,
                    "line": 1,
                  },
                },
                "object": Identifier {
                  "loc": {
                    "end": {
                      "column": 25,
                      "line": 1,
                    },
                    "start": {
                      "column": 19,
                      "line": 1,
                    },
                  },
                  "name": "ticket",
                  "type": "Identifier",
                },
                "property": Identifier {
                  "loc": {
                    "end": {
                      "column": 34,
                      "line": 1,
                    },
                    "start": {
                      "column": 26,
                      "line": 1,
                    },
                  },
                  "name": "customer",
                  "type": "Identifier",
                },
                "type": "MemberExpression",
              },
              "property": Identifier {
                "loc": {
                  "end": {
                    "column": 39,
                    "line": 1,
                  },
                  "start": {
                    "column": 35,
                    "line": 1,
                  },
                },
                "name": "data",
                "type": "Identifier",
              },
              "type": "MemberExpression",
            },
            ArrayExpression {
              "elements": [],
              "loc": {
                "end": {
                  "column": 43,
                  "line": 1,
                },
                "start": {
                  "column": 41,
                  "line": 1,
                },
              },
              "type": "ArrayExpression",
            },
          ],
          "callee": Identifier {
            "loc": {
              "end": {
                "column": 18,
                "line": 1,
              },
              "start": {
                "column": 4,
                "line": 1,
              },
            },
            "name": "notContainsAny",
            "type": "Identifier",
          },
          "loc": {
            "end": {
              "column": 44,
              "line": 1,
            },
            "start": {
              "column": 4,
              "line": 1,
            },
          },
          "type": "CallExpression",
        },
        "type": "IfStatement",
      },
    ],
    "loc": {
      "end": {
        "column": 1,
        "line": 3,
      },
      "start": {
        "column": 0,
        "line": 1,
      },
    },
    "sourceType": "script",
    "type": "Program",
  },
  "code": "if (notContainsAny(ticket.customer.data, [])) {
} else {
}",
}
`;

exports[`ast utils updateCodeAst CallExpression changed arguments changed should update property and reset value (middle attribute changed 3`] = `
{
  "ast": Script {
    "body": [
      IfStatement {
        "alternate": BlockStatement {
          "body": [],
          "loc": {
            "end": {
              "column": 1,
              "line": 3,
            },
            "start": {
              "column": 7,
              "line": 2,
            },
          },
          "type": "BlockStatement",
        },
        "consequent": BlockStatement {
          "body": [],
          "loc": {
            "end": {
              "column": 1,
              "line": 2,
            },
            "start": {
              "column": 33,
              "line": 1,
            },
          },
          "type": "BlockStatement",
        },
        "loc": {
          "end": {
            "column": 1,
            "line": 3,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "test": CallExpression {
          "arguments": [
            StaticMemberExpression {
              "computed": false,
              "loc": {
                "end": {
                  "column": 24,
                  "line": 1,
                },
                "start": {
                  "column": 7,
                  "line": 1,
                },
              },
              "object": Identifier {
                "loc": {
                  "end": {
                    "column": 13,
                    "line": 1,
                  },
                  "start": {
                    "column": 7,
                    "line": 1,
                  },
                },
                "name": "ticket",
                "type": "Identifier",
              },
              "property": Identifier {
                "loc": {
                  "end": {
                    "column": 24,
                    "line": 1,
                  },
                  "start": {
                    "column": 14,
                    "line": 1,
                  },
                },
                "name": "from_agent",
                "type": "Identifier",
              },
              "type": "MemberExpression",
            },
            Literal {
              "loc": {
                "end": {
                  "column": 30,
                  "line": 1,
                },
                "start": {
                  "column": 26,
                  "line": 1,
                },
              },
              "raw": "true",
              "type": "Literal",
              "value": true,
            },
          ],
          "callee": Identifier {
            "loc": {
              "end": {
                "column": 6,
                "line": 1,
              },
              "start": {
                "column": 4,
                "line": 1,
              },
            },
            "name": "eq",
            "type": "Identifier",
          },
          "loc": {
            "end": {
              "column": 31,
              "line": 1,
            },
            "start": {
              "column": 4,
              "line": 1,
            },
          },
          "type": "CallExpression",
        },
        "type": "IfStatement",
      },
    ],
    "loc": {
      "end": {
        "column": 1,
        "line": 3,
      },
      "start": {
        "column": 0,
        "line": 1,
      },
    },
    "sourceType": "script",
    "type": "Program",
  },
  "code": "if (eq(ticket.from_agent, true)) {
} else {
}",
}
`;

exports[`ast utils updateCodeAst CallExpression changed arguments changed should update property name and reset value (last attribute name changed 1`] = `
{
  "ast": Script {
    "body": [
      IfStatement {
        "alternate": BlockStatement {
          "body": [],
          "loc": {
            "end": {
              "column": 1,
              "line": 3,
            },
            "start": {
              "column": 7,
              "line": 2,
            },
          },
          "type": "BlockStatement",
        },
        "consequent": BlockStatement {
          "body": [],
          "loc": {
            "end": {
              "column": 1,
              "line": 2,
            },
            "start": {
              "column": 33,
              "line": 1,
            },
          },
          "type": "BlockStatement",
        },
        "loc": {
          "end": {
            "column": 1,
            "line": 3,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "test": CallExpression {
          "arguments": [
            StaticMemberExpression {
              "computed": false,
              "loc": {
                "end": {
                  "column": 24,
                  "line": 1,
                },
                "start": {
                  "column": 7,
                  "line": 1,
                },
              },
              "object": Identifier {
                "loc": {
                  "end": {
                    "column": 13,
                    "line": 1,
                  },
                  "start": {
                    "column": 7,
                    "line": 1,
                  },
                },
                "name": "ticket",
                "type": "Identifier",
              },
              "property": Identifier {
                "loc": {
                  "end": {
                    "column": 24,
                    "line": 1,
                  },
                  "start": {
                    "column": 14,
                    "line": 1,
                  },
                },
                "name": "from_agent",
                "type": "Identifier",
              },
              "type": "MemberExpression",
            },
            Literal {
              "loc": {
                "end": {
                  "column": 30,
                  "line": 1,
                },
                "start": {
                  "column": 26,
                  "line": 1,
                },
              },
              "raw": "true",
              "type": "Literal",
              "value": true,
            },
          ],
          "callee": Identifier {
            "loc": {
              "end": {
                "column": 6,
                "line": 1,
              },
              "start": {
                "column": 4,
                "line": 1,
              },
            },
            "name": "eq",
            "type": "Identifier",
          },
          "loc": {
            "end": {
              "column": 31,
              "line": 1,
            },
            "start": {
              "column": 4,
              "line": 1,
            },
          },
          "type": "CallExpression",
        },
        "type": "IfStatement",
      },
    ],
    "loc": {
      "end": {
        "column": 1,
        "line": 3,
      },
      "start": {
        "column": 0,
        "line": 1,
      },
    },
    "sourceType": "script",
    "type": "Program",
  },
  "code": "if (eq(ticket.from_agent, true)) {
} else {
}",
}
`;

exports[`ast utils updateCodeAst CallExpression changed arguments changed should update value (ArrayExpression value changed) 1`] = `
{
  "ast": Script {
    "body": [
      IfStatement {
        "alternate": BlockStatement {
          "body": [],
          "loc": {
            "end": {
              "column": 1,
              "line": 6,
            },
            "start": {
              "column": 7,
              "line": 5,
            },
          },
          "type": "BlockStatement",
        },
        "consequent": BlockStatement {
          "body": [],
          "loc": {
            "end": {
              "column": 1,
              "line": 5,
            },
            "start": {
              "column": 8,
              "line": 4,
            },
          },
          "type": "BlockStatement",
        },
        "loc": {
          "end": {
            "column": 1,
            "line": 6,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "test": CallExpression {
          "arguments": [
            StaticMemberExpression {
              "computed": false,
              "loc": {
                "end": {
                  "column": 30,
                  "line": 1,
                },
                "start": {
                  "column": 16,
                  "line": 1,
                },
              },
              "object": Identifier {
                "loc": {
                  "end": {
                    "column": 22,
                    "line": 1,
                  },
                  "start": {
                    "column": 16,
                    "line": 1,
                  },
                },
                "name": "ticket",
                "type": "Identifier",
              },
              "property": Identifier {
                "loc": {
                  "end": {
                    "column": 30,
                    "line": 1,
                  },
                  "start": {
                    "column": 23,
                    "line": 1,
                  },
                },
                "name": "subject",
                "type": "Identifier",
              },
              "type": "MemberExpression",
            },
            ArrayExpression {
              "elements": [
                Literal {
                  "loc": {
                    "end": {
                      "column": 15,
                      "line": 2,
                    },
                    "start": {
                      "column": 8,
                      "line": 2,
                    },
                  },
                  "raw": "'hello'",
                  "type": "Literal",
                  "value": "hello",
                },
                Literal {
                  "loc": {
                    "end": {
                      "column": 15,
                      "line": 3,
                    },
                    "start": {
                      "column": 8,
                      "line": 3,
                    },
                  },
                  "raw": "'world'",
                  "type": "Literal",
                  "value": "world",
                },
              ],
              "loc": {
                "end": {
                  "column": 5,
                  "line": 4,
                },
                "start": {
                  "column": 32,
                  "line": 1,
                },
              },
              "type": "ArrayExpression",
            },
          ],
          "callee": Identifier {
            "loc": {
              "end": {
                "column": 15,
                "line": 1,
              },
              "start": {
                "column": 4,
                "line": 1,
              },
            },
            "name": "containsAll",
            "type": "Identifier",
          },
          "loc": {
            "end": {
              "column": 6,
              "line": 4,
            },
            "start": {
              "column": 4,
              "line": 1,
            },
          },
          "type": "CallExpression",
        },
        "type": "IfStatement",
      },
    ],
    "loc": {
      "end": {
        "column": 1,
        "line": 6,
      },
      "start": {
        "column": 0,
        "line": 1,
      },
    },
    "sourceType": "script",
    "type": "Program",
  },
  "code": "if (containsAll(ticket.subject, [
        'hello',
        'world'
    ])) {
} else {
}",
}
`;

exports[`ast utils updateCodeAst CallExpression changed arguments changed should update value (Literal value changed) 1`] = `
{
  "ast": Script {
    "body": [
      IfStatement {
        "alternate": BlockStatement {
          "body": [],
          "loc": {
            "end": {
              "column": 1,
              "line": 3,
            },
            "start": {
              "column": 7,
              "line": 2,
            },
          },
          "type": "BlockStatement",
        },
        "consequent": BlockStatement {
          "body": [],
          "loc": {
            "end": {
              "column": 1,
              "line": 2,
            },
            "start": {
              "column": 40,
              "line": 1,
            },
          },
          "type": "BlockStatement",
        },
        "loc": {
          "end": {
            "column": 1,
            "line": 3,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "test": CallExpression {
          "arguments": [
            StaticMemberExpression {
              "computed": false,
              "loc": {
                "end": {
                  "column": 21,
                  "line": 1,
                },
                "start": {
                  "column": 7,
                  "line": 1,
                },
              },
              "object": Identifier {
                "loc": {
                  "end": {
                    "column": 13,
                    "line": 1,
                  },
                  "start": {
                    "column": 7,
                    "line": 1,
                  },
                },
                "name": "ticket",
                "type": "Identifier",
              },
              "property": Identifier {
                "loc": {
                  "end": {
                    "column": 21,
                    "line": 1,
                  },
                  "start": {
                    "column": 14,
                    "line": 1,
                  },
                },
                "name": "subject",
                "type": "Identifier",
              },
              "type": "MemberExpression",
            },
            Literal {
              "loc": {
                "end": {
                  "column": 37,
                  "line": 1,
                },
                "start": {
                  "column": 23,
                  "line": 1,
                },
              },
              "raw": "'hello world!'",
              "type": "Literal",
              "value": "hello world!",
            },
          ],
          "callee": Identifier {
            "loc": {
              "end": {
                "column": 6,
                "line": 1,
              },
              "start": {
                "column": 4,
                "line": 1,
              },
            },
            "name": "eq",
            "type": "Identifier",
          },
          "loc": {
            "end": {
              "column": 38,
              "line": 1,
            },
            "start": {
              "column": 4,
              "line": 1,
            },
          },
          "type": "CallExpression",
        },
        "type": "IfStatement",
      },
    ],
    "loc": {
      "end": {
        "column": 1,
        "line": 3,
      },
      "start": {
        "column": 0,
        "line": 1,
      },
    },
    "sourceType": "script",
    "type": "Program",
  },
  "code": "if (eq(ticket.subject, 'hello world!')) {
} else {
}",
}
`;

exports[`ast utils updateCodeAst CallExpression changed callee changed should ONLY change callee and keep value (array value - from a collection operator to a collection operator) 1`] = `
{
  "ast": Script {
    "body": [
      IfStatement {
        "alternate": BlockStatement {
          "body": [],
          "loc": {
            "end": {
              "column": 1,
              "line": 3,
            },
            "start": {
              "column": 7,
              "line": 2,
            },
          },
          "type": "BlockStatement",
        },
        "consequent": BlockStatement {
          "body": [],
          "loc": {
            "end": {
              "column": 1,
              "line": 2,
            },
            "start": {
              "column": 47,
              "line": 1,
            },
          },
          "type": "BlockStatement",
        },
        "loc": {
          "end": {
            "column": 1,
            "line": 3,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "test": CallExpression {
          "arguments": [
            StaticMemberExpression {
              "computed": false,
              "loc": {
                "end": {
                  "column": 33,
                  "line": 1,
                },
                "start": {
                  "column": 19,
                  "line": 1,
                },
              },
              "object": Identifier {
                "loc": {
                  "end": {
                    "column": 25,
                    "line": 1,
                  },
                  "start": {
                    "column": 19,
                    "line": 1,
                  },
                },
                "name": "ticket",
                "type": "Identifier",
              },
              "property": Identifier {
                "loc": {
                  "end": {
                    "column": 33,
                    "line": 1,
                  },
                  "start": {
                    "column": 26,
                    "line": 1,
                  },
                },
                "name": "subject",
                "type": "Identifier",
              },
              "type": "MemberExpression",
            },
            ArrayExpression {
              "elements": [
                Literal {
                  "loc": {
                    "end": {
                      "column": 43,
                      "line": 1,
                    },
                    "start": {
                      "column": 36,
                      "line": 1,
                    },
                  },
                  "raw": "'hello'",
                  "type": "Literal",
                  "value": "hello",
                },
              ],
              "loc": {
                "end": {
                  "column": 44,
                  "line": 1,
                },
                "start": {
                  "column": 35,
                  "line": 1,
                },
              },
              "type": "ArrayExpression",
            },
          ],
          "callee": Identifier {
            "loc": {
              "end": {
                "column": 18,
                "line": 1,
              },
              "start": {
                "column": 4,
                "line": 1,
              },
            },
            "name": "notContainsAll",
            "type": "Identifier",
          },
          "loc": {
            "end": {
              "column": 45,
              "line": 1,
            },
            "start": {
              "column": 4,
              "line": 1,
            },
          },
          "type": "CallExpression",
        },
        "type": "IfStatement",
      },
    ],
    "loc": {
      "end": {
        "column": 1,
        "line": 3,
      },
      "start": {
        "column": 0,
        "line": 1,
      },
    },
    "sourceType": "script",
    "type": "Program",
  },
  "code": "if (notContainsAll(ticket.subject, ['hello'])) {
} else {
}",
}
`;

exports[`ast utils updateCodeAst CallExpression changed callee changed should ONLY change callee and keep value (from a string operator to a string operator) 1`] = `
{
  "ast": Script {
    "body": [
      IfStatement {
        "alternate": BlockStatement {
          "body": [],
          "loc": {
            "end": {
              "column": 1,
              "line": 3,
            },
            "start": {
              "column": 7,
              "line": 2,
            },
          },
          "type": "BlockStatement",
        },
        "consequent": BlockStatement {
          "body": [],
          "loc": {
            "end": {
              "column": 1,
              "line": 2,
            },
            "start": {
              "column": 34,
              "line": 1,
            },
          },
          "type": "BlockStatement",
        },
        "loc": {
          "end": {
            "column": 1,
            "line": 3,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "test": CallExpression {
          "arguments": [
            StaticMemberExpression {
              "computed": false,
              "loc": {
                "end": {
                  "column": 22,
                  "line": 1,
                },
                "start": {
                  "column": 8,
                  "line": 1,
                },
              },
              "object": Identifier {
                "loc": {
                  "end": {
                    "column": 14,
                    "line": 1,
                  },
                  "start": {
                    "column": 8,
                    "line": 1,
                  },
                },
                "name": "ticket",
                "type": "Identifier",
              },
              "property": Identifier {
                "loc": {
                  "end": {
                    "column": 22,
                    "line": 1,
                  },
                  "start": {
                    "column": 15,
                    "line": 1,
                  },
                },
                "name": "subject",
                "type": "Identifier",
              },
              "type": "MemberExpression",
            },
            Literal {
              "loc": {
                "end": {
                  "column": 31,
                  "line": 1,
                },
                "start": {
                  "column": 24,
                  "line": 1,
                },
              },
              "raw": "'hello'",
              "type": "Literal",
              "value": "hello",
            },
          ],
          "callee": Identifier {
            "loc": {
              "end": {
                "column": 7,
                "line": 1,
              },
              "start": {
                "column": 4,
                "line": 1,
              },
            },
            "name": "neq",
            "type": "Identifier",
          },
          "loc": {
            "end": {
              "column": 32,
              "line": 1,
            },
            "start": {
              "column": 4,
              "line": 1,
            },
          },
          "type": "CallExpression",
        },
        "type": "IfStatement",
      },
    ],
    "loc": {
      "end": {
        "column": 1,
        "line": 3,
      },
      "start": {
        "column": 0,
        "line": 1,
      },
    },
    "sourceType": "script",
    "type": "Program",
  },
  "code": "if (neq(ticket.subject, 'hello')) {
} else {
}",
}
`;

exports[`ast utils updateCodeAst CallExpression changed callee changed should ONLY change callee and keep value (integer value) 1`] = `
{
  "ast": Script {
    "body": [
      IfStatement {
        "alternate": BlockStatement {
          "body": [],
          "loc": {
            "end": {
              "column": 1,
              "line": 3,
            },
            "start": {
              "column": 7,
              "line": 2,
            },
          },
          "type": "BlockStatement",
        },
        "consequent": BlockStatement {
          "body": [],
          "loc": {
            "end": {
              "column": 1,
              "line": 2,
            },
            "start": {
              "column": 36,
              "line": 1,
            },
          },
          "type": "BlockStatement",
        },
        "loc": {
          "end": {
            "column": 1,
            "line": 3,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "test": CallExpression {
          "arguments": [
            StaticMemberExpression {
              "computed": false,
              "loc": {
                "end": {
                  "column": 30,
                  "line": 1,
                },
                "start": {
                  "column": 8,
                  "line": 1,
                },
              },
              "object": Identifier {
                "loc": {
                  "end": {
                    "column": 15,
                    "line": 1,
                  },
                  "start": {
                    "column": 8,
                    "line": 1,
                  },
                },
                "name": "message",
                "type": "Identifier",
              },
              "property": Identifier {
                "loc": {
                  "end": {
                    "column": 30,
                    "line": 1,
                  },
                  "start": {
                    "column": 16,
                    "line": 1,
                  },
                },
                "name": "integration_id",
                "type": "Identifier",
              },
              "type": "MemberExpression",
            },
            Literal {
              "loc": {
                "end": {
                  "column": 33,
                  "line": 1,
                },
                "start": {
                  "column": 32,
                  "line": 1,
                },
              },
              "raw": "7",
              "type": "Literal",
              "value": 7,
            },
          ],
          "callee": Identifier {
            "loc": {
              "end": {
                "column": 7,
                "line": 1,
              },
              "start": {
                "column": 4,
                "line": 1,
              },
            },
            "name": "neq",
            "type": "Identifier",
          },
          "loc": {
            "end": {
              "column": 34,
              "line": 1,
            },
            "start": {
              "column": 4,
              "line": 1,
            },
          },
          "type": "CallExpression",
        },
        "type": "IfStatement",
      },
    ],
    "loc": {
      "end": {
        "column": 1,
        "line": 3,
      },
      "start": {
        "column": 0,
        "line": 1,
      },
    },
    "sourceType": "script",
    "type": "Program",
  },
  "code": "if (neq(message.integration_id, 7)) {
} else {
}",
}
`;

exports[`ast utils updateCodeAst CallExpression changed callee changed should change callee and reset value (changed from a collection operator to string operator) 1`] = `
{
  "ast": Script {
    "body": [
      IfStatement {
        "alternate": BlockStatement {
          "body": [],
          "loc": {
            "end": {
              "column": 1,
              "line": 3,
            },
            "start": {
              "column": 7,
              "line": 2,
            },
          },
          "type": "BlockStatement",
        },
        "consequent": BlockStatement {
          "body": [],
          "loc": {
            "end": {
              "column": 1,
              "line": 2,
            },
            "start": {
              "column": 28,
              "line": 1,
            },
          },
          "type": "BlockStatement",
        },
        "loc": {
          "end": {
            "column": 1,
            "line": 3,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "test": CallExpression {
          "arguments": [
            StaticMemberExpression {
              "computed": false,
              "loc": {
                "end": {
                  "column": 21,
                  "line": 1,
                },
                "start": {
                  "column": 7,
                  "line": 1,
                },
              },
              "object": Identifier {
                "loc": {
                  "end": {
                    "column": 13,
                    "line": 1,
                  },
                  "start": {
                    "column": 7,
                    "line": 1,
                  },
                },
                "name": "ticket",
                "type": "Identifier",
              },
              "property": Identifier {
                "loc": {
                  "end": {
                    "column": 21,
                    "line": 1,
                  },
                  "start": {
                    "column": 14,
                    "line": 1,
                  },
                },
                "name": "subject",
                "type": "Identifier",
              },
              "type": "MemberExpression",
            },
            Literal {
              "loc": {
                "end": {
                  "column": 25,
                  "line": 1,
                },
                "start": {
                  "column": 23,
                  "line": 1,
                },
              },
              "raw": "''",
              "type": "Literal",
              "value": "",
            },
          ],
          "callee": Identifier {
            "loc": {
              "end": {
                "column": 6,
                "line": 1,
              },
              "start": {
                "column": 4,
                "line": 1,
              },
            },
            "name": "eq",
            "type": "Identifier",
          },
          "loc": {
            "end": {
              "column": 26,
              "line": 1,
            },
            "start": {
              "column": 4,
              "line": 1,
            },
          },
          "type": "CallExpression",
        },
        "type": "IfStatement",
      },
    ],
    "loc": {
      "end": {
        "column": 1,
        "line": 3,
      },
      "start": {
        "column": 0,
        "line": 1,
      },
    },
    "sourceType": "script",
    "type": "Program",
  },
  "code": "if (eq(ticket.subject, '')) {
} else {
}",
}
`;

exports[`ast utils updateCodeAst CallExpression changed callee changed should change callee and reset value (from string operator to a collection operator) 1`] = `
{
  "ast": Script {
    "body": [
      IfStatement {
        "alternate": BlockStatement {
          "body": [],
          "loc": {
            "end": {
              "column": 1,
              "line": 3,
            },
            "start": {
              "column": 7,
              "line": 2,
            },
          },
          "type": "BlockStatement",
        },
        "consequent": BlockStatement {
          "body": [],
          "loc": {
            "end": {
              "column": 1,
              "line": 2,
            },
            "start": {
              "column": 44,
              "line": 1,
            },
          },
          "type": "BlockStatement",
        },
        "loc": {
          "end": {
            "column": 1,
            "line": 3,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "test": CallExpression {
          "arguments": [
            StaticMemberExpression {
              "computed": false,
              "loc": {
                "end": {
                  "column": 30,
                  "line": 1,
                },
                "start": {
                  "column": 16,
                  "line": 1,
                },
              },
              "object": Identifier {
                "loc": {
                  "end": {
                    "column": 22,
                    "line": 1,
                  },
                  "start": {
                    "column": 16,
                    "line": 1,
                  },
                },
                "name": "ticket",
                "type": "Identifier",
              },
              "property": Identifier {
                "loc": {
                  "end": {
                    "column": 30,
                    "line": 1,
                  },
                  "start": {
                    "column": 23,
                    "line": 1,
                  },
                },
                "name": "subject",
                "type": "Identifier",
              },
              "type": "MemberExpression",
            },
            ArrayExpression {
              "elements": [
                Literal {
                  "loc": {
                    "end": {
                      "column": 40,
                      "line": 1,
                    },
                    "start": {
                      "column": 33,
                      "line": 1,
                    },
                  },
                  "raw": "'hello'",
                  "type": "Literal",
                  "value": "hello",
                },
              ],
              "loc": {
                "end": {
                  "column": 41,
                  "line": 1,
                },
                "start": {
                  "column": 32,
                  "line": 1,
                },
              },
              "type": "ArrayExpression",
            },
          ],
          "callee": Identifier {
            "loc": {
              "end": {
                "column": 15,
                "line": 1,
              },
              "start": {
                "column": 4,
                "line": 1,
              },
            },
            "name": "containsAll",
            "type": "Identifier",
          },
          "loc": {
            "end": {
              "column": 42,
              "line": 1,
            },
            "start": {
              "column": 4,
              "line": 1,
            },
          },
          "type": "CallExpression",
        },
        "type": "IfStatement",
      },
    ],
    "loc": {
      "end": {
        "column": 1,
        "line": 3,
      },
      "start": {
        "column": 0,
        "line": 1,
      },
    },
    "sourceType": "script",
    "type": "Program",
  },
  "code": "if (containsAll(ticket.subject, ['hello'])) {
} else {
}",
}
`;

exports[`ast utils updateCodeAst CallExpression changed update if statement should add else block to if statement 1`] = `
{
  "ast": Script {
    "body": [
      IfStatement {
        "alternate": BlockStatement {
          "body": [],
          "loc": {
            "end": {
              "column": 1,
              "line": 3,
            },
            "start": {
              "column": 7,
              "line": 2,
            },
          },
          "type": "BlockStatement",
        },
        "consequent": BlockStatement {
          "body": [],
          "loc": {
            "end": {
              "column": 1,
              "line": 2,
            },
            "start": {
              "column": 33,
              "line": 1,
            },
          },
          "type": "BlockStatement",
        },
        "loc": {
          "end": {
            "column": 1,
            "line": 3,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "test": CallExpression {
          "arguments": [
            StaticMemberExpression {
              "computed": false,
              "loc": {
                "end": {
                  "column": 21,
                  "line": 1,
                },
                "start": {
                  "column": 7,
                  "line": 1,
                },
              },
              "object": Identifier {
                "loc": {
                  "end": {
                    "column": 13,
                    "line": 1,
                  },
                  "start": {
                    "column": 7,
                    "line": 1,
                  },
                },
                "name": "ticket",
                "type": "Identifier",
              },
              "property": Identifier {
                "loc": {
                  "end": {
                    "column": 21,
                    "line": 1,
                  },
                  "start": {
                    "column": 14,
                    "line": 1,
                  },
                },
                "name": "subject",
                "type": "Identifier",
              },
              "type": "MemberExpression",
            },
            Literal {
              "loc": {
                "end": {
                  "column": 30,
                  "line": 1,
                },
                "start": {
                  "column": 23,
                  "line": 1,
                },
              },
              "raw": "'hello'",
              "type": "Literal",
              "value": "hello",
            },
          ],
          "callee": Identifier {
            "loc": {
              "end": {
                "column": 6,
                "line": 1,
              },
              "start": {
                "column": 4,
                "line": 1,
              },
            },
            "name": "eq",
            "type": "Identifier",
          },
          "loc": {
            "end": {
              "column": 31,
              "line": 1,
            },
            "start": {
              "column": 4,
              "line": 1,
            },
          },
          "type": "CallExpression",
        },
        "type": "IfStatement",
      },
    ],
    "loc": {
      "end": {
        "column": 1,
        "line": 3,
      },
      "start": {
        "column": 0,
        "line": 1,
      },
    },
    "sourceType": "script",
    "type": "Program",
  },
  "code": "if (eq(ticket.subject, 'hello')) {
} else {
}",
}
`;
